Add calendar-task creation using drag n drop

--- a/ui/inspectors/calendar.reel/calendar-widget.reel/calendar-widget.html
+++ b/ui/inspectors/calendar.reel/calendar-widget.reel/calendar-widget.html
@@ -172,11 +172,11 @@
                 <div data-montage-id="viewTabs" class="Calendar-viewTabs"></div>
             </div>
             <div class="flex-row flex-spaceBetween flex-alignItems--center">
-                <div data-montage-id="taskCategories" class="CalendarWidget-taskCategories is-hidden">
+                <div data-montage-id="taskCategories" class="CalendarWidget-taskCategories">
                     <div data-montage-id="taskCategory" class="CalendarWidget-taskCategory"></div>
                 </div>
                 <div data-montage-id="taskFilter"></div>
-                <button data-montage-id="createTask" class="Button--create">
+                <button data-montage-id="createTask" class="Button--create is-hidden">
                     <svg><use xlink:href="#i-circle-plus"/></svg>
                 </button>
             </div>
