Fix the docker host property within the container-creator

--- a/ui/sections/containers/inspectors/container-creator.reel/container-creator.html
+++ b/ui/sections/containers/inspectors/container-creator.reel/container-creator.html
@@ -76,7 +76,7 @@
             },
             "bindings": {
                 "options": {"<-": "[{label: 'default', value: null}].concat(@owner._availablesDockers)"},
-                "value": {"<->": "@owner.object.host"}
+                "selectedValue": {"<->": "@owner.object.host"}
             }
         },
 
