Fix group suffix widget to point to correct middleware field.

--- a/ui/inspectors/directory-services.reel/ldap-service.reel/ldap-service.html
+++ b/ui/inspectors/directory-services.reel/ldap-service.reel/ldap-service.html
@@ -96,7 +96,7 @@
                 "label": "Group Suffix"
             },
             "bindings": {
-                "value": {"<->": "@owner.object.parameters.user_suffix"}
+                "value": {"<->": "@owner.object.parameters.group_suffix"}
             }
         },
 
